# docs/swagger.json
@@ -88,7 +88,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Notification"
+                            "$ref": "#/definitions/model.CreateNotification"
                         }
                     }
                 ],
@@ -126,7 +126,7 @@
                 }
             }
         },
-        "/api/notifications/mark-as-read": {
+        "/api/notifications/mark-all-read": {
             "put": {
                 "description": "Mark all notifications as read",
                 "consumes": [
@@ -294,9 +294,149 @@
                     }
                 }
             }
+        },
+        "/api/revenue/month": {
+            "get": {
+                "description": "Get total revenue grouped by month",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Revenue"
+                ],
+                "summary": "Fetch monthly revenue",
+                "responses": {
+                    "200": {
+                        "description": "Fetch monthly revenue successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/model.MonthlyRevenue"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to fetch monthly revenue",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/revenue/products": {
+            "get": {
+                "description": "Get revenue details for all products",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Revenue"
+                ],
+                "summary": "Fetch product revenues",
+                "responses": {
+                    "200": {
+                        "description": "Fetch product revenues successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/model.ProductRevenue"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to fetch product revenues",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/revenue/status": {
+            "get": {
+                "description": "Get total revenue grouped by order status",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Revenue"
+                ],
+                "summary": "Fetch total revenue by status",
+                "responses": {
+                    "200": {
+                        "description": "Fetch total revenue by status successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/model.RevenueByStatus"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to fetch total revenue by status",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "model.CreateNotification": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "You have a new message"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "new"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "New Message"
+                }
+            }
+        },
         "model.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -305,6 +445,23 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "model.MonthlyRevenue": {
+            "type": "object",
+            "required": [
+                "month",
+                "revenue"
+            ],
+            "properties": {
+                "month": {
+                    "type": "string",
+                    "example": "January"
+                },
+                "revenue": {
+                    "type": "number",
+                    "example": 100.5
                 }
             }
         },
@@ -321,11 +478,69 @@
                 },
                 "status": {
                     "type": "string",
-                    "example": "unread"
+                    "example": "new"
                 },
                 "title": {
                     "type": "string",
                     "example": "New Message"
+                }
+            }
+        },
+        "model.ProductRevenue": {
+            "type": "object",
+            "required": [
+                "product_name",
+                "profit",
+                "profit_margin",
+                "revenue_date",
+                "sell_price",
+                "total_revenue"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "product_name": {
+                    "type": "string",
+                    "example": "Chicken Parmesan"
+                },
+                "profit": {
+                    "type": "number",
+                    "example": 7985
+                },
+                "profit_margin": {
+                    "type": "number",
+                    "example": 15
+                },
+                "revenue_date": {
+                    "type": "string",
+                    "example": "2024-03-28"
+                },
+                "sell_price": {
+                    "type": "number",
+                    "example": 55
+                },
+                "total_revenue": {
+                    "type": "number",
+                    "example": 8000
+                }
+            }
+        },
+        "model.RevenueByStatus": {
+            "type": "object",
+            "required": [
+                "revenue",
+                "status"
+            ],
+            "properties": {
+                "revenue": {
+                    "type": "number",
+                    "example": 100.5
+                },
+                "status": {
+                    "type": "string",
+                    "example": "confirmed"
                 }
             }
         },
@@ -337,7 +552,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         }
